# mlx-chat-ui

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  start.sh
.chainlit/: config.toml
.github/workflows/: integration.yml
.streamlit/: config.toml
src/config/: model_config.py
src/core/: cache.py  engine.py  types.py
src/ui/: chat_interface.py
