[project]
name = "mlx-chat-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "huggingface_hub>=0.33.2",
    "mlx-lm>=0.25.3",
    "streamlit>=1.46.1",
    "requests>=2.32.4",
    "sseclient-py>=1.8.0",
    "watchdog>=6.0.0"
]

[build-system]
requires = [
    "setuptools>=42"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
mlx-chat-ui = { workspace = true }

[dependency-groups]
dev = [
    "mlx-chat-ui",
]
