[project]
name = "mlx-chat-ui"
version = "0.1.0"
description = "A webUI tool for interacting with MLX models"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Peter Mikus"},
]
requires-python = "==3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "huggingface_hub",
    "mlx-lm",
    "chainlit",
    "openai",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/pmikus/mlx-chat-ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
mlx-chat-ui = { workspace = true }

[dependency-groups]
dev = [
    "mlx-chat-ui",
]
