[project]
name = "mlx-chat-ui"
version = "0.1.0"
description = "A webUI tool for interacting with MLX models"
readme = "README.md"
authors = [
    {name = "Peter Mikus"},
]
requires-python = "==3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "chainlit>=2.6.0",
    "huggingface-hub>=0.33.2",
    "langchain>=0.3.26",
    "mlx-lm>=0.25.3",
    "openai>=1.93.0",
]

[build-system]
requires = [
    "setuptools>=61.0.0"
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/pmikus/mlx-chat-ui"

[tool.uv.sources]
mlx-chat-ui = { workspace = true }

[dependency-groups]
dev = [
    "mlx-chat-ui",
]
